# kinosite-reactjs

./: README.md  docker-compose.yaml  pyproject.toml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/app/: alembic.ini  config.py  exceptions.py  main.py
backend/app/apiconnect/: apivb.py
backend/app/certs/: private_key.pem  public_key.pem
backend/app/dao/: dao.py
backend/app/database/: database.py  kinobase.db
backend/app/migrations/: env.py
backend/app/migrations/versions/: 12d0dbb3378e_init_migratio.py  2141513e7c97_init_migratio.py  27cee31bbd65_init_migratio.py  29718ffe472e_init_migratio.py  9a196be06dc1_добавление_даты_регистрации_в_модель_.py  9cd56947d2b2_init_migratio.py  f1489f361d48_new_update.py
backend/app/models/admin/: auth.py  router.py
backend/app/models/category/: router.py  schemas.py
backend/app/models/history/: dao.py  model.py  router.py  schema.py
backend/app/models/images/: dao.py  router.py
backend/app/models/mainpage/: router.py  schemas.py
backend/app/models/review/: dao.py  model.py  router.py  schemas.py
backend/app/models/rooms/: model.py  roomdao.py  router.py  schema.py
backend/app/models/search/: manticore_search.py  router.py  schemas.py
backend/app/models/section/: router.py  schemas.py
backend/app/models/session/: model.py  sessiondao.py
backend/app/models/users/: dao.py  dependencies.py  model.py  router.py  schemas.py  security.py
backend/app/models/youtube/: dao.py  model.py  router.py
backend/app/pytests/: pytest_selection.py
backend/app/tasks/: image_worker.py  tasks.py
frontend/: .env  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: playerjs.html  playerjs.js
frontend/src/: App.css  App.jsx  main.jsx
kinosite-react/: index.html  package-lock.json  package.json
kinosite-react/src/: App.css  App.jsx
script/: Dockerfile  movie.db  populate_db.py  script.py
(+70 files in other folders)
